--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ env:
 phases:
   pre_build:
     commands:
-      - nohup /usr/local/bin/dockerd --host-unix:///var/run/docker.sock --storage-driver=overlay&
+      - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --storage-driver=overlay&
       - timeout -t 15 sh -c "until docker info; do echo .; sleep 1; done"
       - make login
   build:
